# rag_pipeline

./: .env  .gitignore  LICENSE  README.md  example_usage.py  pyproject.toml  requirements.txt  run_test_dataset.py  test_dataset.json  test_pipeline_smoke.py
rag_pipeline/: __init__.py  base.py  config.py  ingestion.py  retrieval.py
rag_pipeline/providers/: __init__.py  docling_parser.py  embeddings.py  llm.py
src/rag_pipeline/: __init__.py  config.py  ingestion.py  orchestrator.py  retrieval.py
src/rag_pipeline/examples/: example_usage.py
src/rag_pipeline/models/: __init__.py
src/rag_pipeline/providers/: docling_parser.py  reranker.py  sparse.py  vector_store.py
src/rag_pipeline/tests/: run_test_dataset.py
