[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-pipeline"
version = "0.1.0"
description = "Production-grade hybrid RAG pipeline with pluggable providers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Manoj" }
]
dependencies = [
  "numpy>=1.24",
  "tenacity>=8.2",
  "openai>=1.0",
  "requests>=2.31",
  "sentence-transformers>=2.2",
  "qdrant-client>=1.9",
  "pyyaml>=6.0",
  "docling>=2.5.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://example.com"
Repository = "https://example.com"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_pipeline*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true